#47188# fixando tamanho do menu, corrigindo bugs de ripple do MUI, alterando cores para maior contraste

--- a/src/pages/Usuarios.css
+++ b/src/pages/Usuarios.css
@@ -1,5 +1,5 @@
 .Usuarios {
-    width: 100%;
+    flex: 1;
     height: 100vh;
     background-color: var(--bgColor);
     display: flex;
